fix: change alignment in copyrights

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -507,8 +507,8 @@ body {
     letter-spacing: 0.7px;
 }
 .copyrights {
-    letter-spacing: normal;
-    line-height: 86px;
+    letter-spacing: 0.1px;
+    line-height: 81px;
     height: 86px;
     text-align: center;
     background-color: #f1c40f;
@@ -517,4 +517,5 @@ body {
 }
 .copyrights__designed-by {
     color: #000000;
+    
 }
